changed namespace to theislab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "batchglm. A cookietemple based ."
 authors = ["Mario Picciani <mario.picciani@tum.de>"]
 license = "BSD"
 readme = "README.rst"
-homepage = "https://github.com/picciama/batchglm"
-repository = "https://github.com/picciama/batchglm"
+homepage = "https://github.com/theislab/batchglm"
+repository = "https://github.com/theislab/batchglm"
 documentation = "https://batchglm.readthedocs.io"
 packages = [
     { include = "batchglm" },
