--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,12 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.9.0"
 click = "^8.0.0"
 rich = "^10.3.0"
 PyYAML = "^5.4.1"
+dask = "^2022.1.1"
+numpy = "1.21"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
