--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ scipy = "^1.7.3"
 pandas = "^1.4.0"
 anndata = "^0.7.8"
 sparse = "^0.13.0"
+matplotlib = "^3.5.1"
+sphinx-autodoc-typehints = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
