--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.8.0, <3.11.0"
+python = ">=3.8.0, <3.10.0"
 click = "^8.0.0"
 rich = "^10.3.0"
 PyYAML = "^5.4.1"
@@ -44,7 +44,7 @@ sphinx = "^4.0.2"
 sphinx-autobuild = "^2021.3.14"
 pre-commit = "^2.11.1"
 flake8 = "^3.8.4"
-black = "^20.8b1"
+black = ">=20.8b1, <=21.10b0"
 flake8-bandit = "^2.1.2"
 flake8-bugbear = "^21.4.3"
 flake8-docstrings = "^1.5.0"
@@ -63,6 +63,8 @@ sphinx-rtd-dark-mode = "^1.2.3"
 Jinja2 = "^3.0.1"
 mypy = "^0.910"
 matplotlib = "^3.5.1"
+nox = "^2022.1.7"
+cookietemple = "^1.3.11"
 
 [tool.poetry.scripts]
 batchglm = "batchglm.__main__:main"
