--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,7 @@ repos:
       hooks:
           - id: isort
             name: isort (python)
+            args: ["--profile", "black"]
           - id: isort
             name: isort (cython)
             types: [cython]
