--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ click = "^8.0.0"
 rich = "^10.3.0"
 PyYAML = "^5.4.1"
 dask = "^2022.1.1"
-numpy = "1.21"
+numpy = ">=1.22.2"
 patsy = "^0.5.2"
 scipy = "^1.7.3"
 pandas = "^1.4.0"
