cleanup and update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ matplotlib = "^3.5.1"
 sphinx-autodoc-typehints = "^1.16.0"
 seaborn = "^0.11.2"
 bandit = "1.7.2"
+typeguard = "^2.13.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
@@ -81,6 +82,7 @@ show_column_numbers = true
 show_error_codes = true
 show_error_context = true
 ignore_missing_imports = true
+exclude = ".*_version.*"
 
 [tool.isort]
 multi_line_output=3
