--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "batchglm"
-version = "0.1.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
+version = "0.7.4"  # <<COOKIETEMPLE_FORCE_BUMP>>
 description = "batchglm. A cookietemple based ."
 authors = ["Mario Picciani <mario.picciani@tum.de>"]
 license = "BSD"
@@ -35,7 +35,6 @@ matplotlib = "^3.5.1"
 sphinx-autodoc-typehints = "^1.16.0"
 seaborn = "^0.11.2"
 bandit = "1.7.2"
-typeguard = "^2.13.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
@@ -68,6 +67,7 @@ mypy = "^0.910"
 matplotlib = "^3.5.1"
 nox = "^2022.1.7"
 cookietemple = "^1.3.11"
+nox-poetry = "^0.9.0"
 
 [tool.poetry.scripts]
 batchglm = "batchglm.__main__:main"
@@ -82,7 +82,7 @@ show_column_numbers = true
 show_error_codes = true
 show_error_context = true
 ignore_missing_imports = true
-exclude = ".*_version.*"
+exclude = "_version.py"
 
 [tool.isort]
 multi_line_output=3
