--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,13 @@ python = ">=3.8.0, <3.10.0"
 click = "^8.0.0"
 rich = "^10.3.0"
 PyYAML = "^5.4.1"
-dask = "^2021.4.1"
+dask = "2021.4.1" # https://github.com/theislab/diffxpy/issues/194
 numpy = ">=1.22.2"
 patsy = "^0.5.2"
 scipy = "^1.7.3"
 pandas = "^1.4.0"
 anndata = "^0.7.8"
-sparse = "^0.9.1"
+sparse = "0.9.1" # https://github.com/theislab/diffxpy/issues/194
 matplotlib = "^3.5.1"
 sphinx-autodoc-typehints = "^1.16.0"
 seaborn = "^0.11.2"
