--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ sphinx = "^4.0.2"
 sphinx-autobuild = "^2021.3.14"
 pre-commit = "^2.11.1"
 flake8 = "^3.8.4"
-black = ">=20.8b1, <=21.10b0"
+black = ">=21.12b0"
 flake8-bandit = "^2.1.2"
 flake8-bugbear = "^21.4.3"
 flake8-docstrings = "^1.5.0"
