--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ python = ">=3.8.0, <3.10.0"
 click = "^8.0.0"
 rich = "^10.3.0"
 PyYAML = "^5.4.1"
-dask = "2021.4.1" # https://github.com/theislab/diffxpy/issues/194
+dask = ">=2021.10.0"
 numpy = ">=1.22.2"
 patsy = "^0.5.2"
 scipy = "^1.7.3"
@@ -66,7 +66,6 @@ Jinja2 = "^3.0.1"
 mypy = "^0.910"
 matplotlib = "^3.5.1"
 nox = "^2022.1.7"
-cookietemple = "^1.3.11"
 nox-poetry = "^0.9.0"
 
 [tool.poetry.scripts]
