revert removing the install of batchglm

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -22,7 +22,7 @@ jobs:
             - name: Install doc dependencies
               run: |
                   pip install -r docs/requirements.txt
-
+                  pip install .
             - name: Build docs
               run: |
                   cd docs
